# solo-leveling

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
adminer/: adminer.css
app/: models.py  prompts.py  tools.py
app/api/: deps.py
app/api/routes/: users.py
app/core/: db.py
app/schemas/: domain.py  models.py
app/services/: users.py
app/tests/: conftest.py
scripts/: lint.sh  prestart.sh  tests_start.sh
